<resources>
    <string name="app_name">MenuRecommendation</string>
    <string name="pTag">Perference tags</string>
    <string name="pDes">Please select the tags you dislike and provide corresponding information</string>
    <string name="cb_meat">Meat</string>
    <string name="cb_m1">Beef</string>
    <string name="cb_m2">Pork</string>
    <string name="cb_m3">Chicken</string>
    <string name="cb_viggie">Viggie</string>
    <string name="cb_v1">lettuce</string>
    <string name="cb_v2">Heart</string>
    <string name="cb_v3">Spinach</string>
    <string name="cb_soup">Soup</string>
    <string name="bSub">Submit</string>
    <string name="number">Number of people</string>
    <string name="pCusine">Cunsine preference</string>
    <string name="Dist">District</string>
    <string name="profile_button">Edit</string>
    <string name="prof_DFT">Dislike food tag</string>
    <string name="edit_des">You can edit your preference here.</string>
    <string name="prof_edit">Edit</string>
</resources>
